# transcribe-cli

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
transcribe_cli/: cli.py  constants.py  transcriber.py  utils.py
